V22: Fixed the overflow issue with canvas and Iframe button

--- a/src/styles/mainPageStyles.css
+++ b/src/styles/mainPageStyles.css
@@ -130,7 +130,8 @@ canvas {
 
   .canvasContainer {
     position: relative;
-    width:80%
+    width:80%;
+    overflow: hidden;
   }
   
   .listContainer {
